fix: An issue where the HtmlAppContainer was not visible because of the z-index that was put on the gridPortal

--- a/src/aux-server/aux-web/shared/vue-components/HtmlAppContainer/HtmlAppContainer.css
+++ b/src/aux-server/aux-web/shared/vue-components/HtmlAppContainer/HtmlAppContainer.css
@@ -1,4 +1,6 @@
 .html-portals-container {
     background-color: initial;
     color: initial;
+    position: relative;
+    z-index: 1;
 }
